Fixed the vertical padding for the section's title on 768-1024px screens that has been shifted 0.2em up after recent updates to the dropdowns

--- a/bottlecap/layouts/popper/static/css/responsive/768.less
+++ b/bottlecap/layouts/popper/static/css/responsive/768.less
@@ -86,7 +86,7 @@
     	h2 {
     	    color: @baseFontColor;
     	    font-weight: bold;
-    	    padding-top: 0.3em;
+    	    padding-top: 0.5em;
     	    padding-bottom: 0;
     	    font-size: 1.185em;
     	    padding-left: (@space * 1em)/1.33em;
